--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
         <a class="navbar-brand" href="#">
             <img src="image/philippine.png" height="35">
-            InCodenito x Kodego</a> 
+            InCodenito</a> 
 
 
 
