--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <input type="password" name="password" id = "password" required value="" placeholder="password">
   
    
-      <button type="submit" href="userprofile/profile.php" name="submit">Login</button>
+      <button type="submit" href="#" name="submit">Login</button>
     </form>
 
 
