--- a/registration/registration.html
+++ b/registration/registration.html
@@ -75,6 +75,24 @@
         <div class="card" id="card" >
         <h2 class="text-light">Registration Form</h2>
 
+
+        <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                  Become Freelancer
+                </label>
+              </div>
+
+
+
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                  Hire Freelancer
+                </label>
+              </div>
+
+
     <form  action="" method="post" autocomplete="off">
       
         <div class="form-group">
