modified:   registration/registration.html

--- a/registration/registration.html
+++ b/registration/registration.html
@@ -79,7 +79,7 @@
         <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
-                  Become Freelancer
+                  Register as Freelancer
                 </label>
               </div>
 
@@ -88,7 +88,7 @@
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
-                  Hire Freelancer
+                  Register as Employer
                 </label>
               </div>
 
