modified:   jobs.html 	modified:   registration/design.css 	modified:   registration/registration.html

--- a/registration/registration.html
+++ b/registration/registration.html
@@ -65,7 +65,7 @@
 
 
 
-  <section class=" p-5 text-sm-start" id="bg">
+  <section class=" p-5" id="bg">
 <div class="container py-5 text-center">
 
 
