--- a/jobs.html
+++ b/jobs.html
@@ -70,7 +70,7 @@
     <section>
 <div class="container-fluid">
     <div class="row m-2">
-        <div class="col-2 bg-light text-dark mx-5 my-5">
+        <div class="col-2 d-none d-md-block bg-light text-dark mx-5 my-5">
             <h4>Filter by:</h4>
             <hr>
             <h6>Budget:</h6>
