modified:   index.html

--- a/index.html
+++ b/index.html
@@ -323,13 +323,13 @@
 
       <div class="row">
 
-        <div class="col">
+        <div class="col ">
          <img src="gif/1.gif" class="img-fluid">
         </div>
 
         <div class="col my-5">
         <h3>Everyday life made easier for you and for us.</h3>
-        <p>When life gets busy, you don’t have to tackle it alone. Get time back for what you love without breaking the bank.</p>
+        <p>When life gets busy, you dont have to tackle it alone. Get time back for what you love without breaking the bank.</p>
         <p>Choose your Tasker by reviews, skills, and price
           Schedule when it works for you — as early as today</p>
         <p>Chat, pay, tip, and review all through one platform</p>
