--- a/jobs.html
+++ b/jobs.html
@@ -61,9 +61,9 @@
 </nav>
 
 
-<section class="bg-info text-light py-2">
+<section class="bg-secondary text-light py-2">
         <div class="container">
-                <h2>Top Jobs</h2>
+                <h2>Jobs Listing</h2>
         </div>
 </section>
 
