modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
         <a class="navbar-brand" href="#">
             <img src="image/philippine.png" height="35">
-            InCodenito</a> 
+            In<span><i>Code</i></span>nito</a> 
 
 
 
@@ -351,7 +351,7 @@
         <div class="row">
 
           <div class="col-sm">
-      <h2 class="text-warning">Choose your payment Options</h2>
+      <h2>Choose your payment Options</h2>
     
             <h5>Fixed Price</h5>   
               <p>Set a total fixed cost for your job and create milestones to ensure you're 
@@ -400,7 +400,6 @@
 <section>
         <div class="container my-5 py-5">
           <div class="row d-flex justify-content-center">
-            <h2 class="text-center">What others say for us</h2>
             <div class="col-md-12 col-lg-10">
               <div class="card text-dark">
                 <div class="card-body p-4">
@@ -524,6 +523,23 @@
    </section>
  
 
+   <section class="home-newsletter">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="single">
+                    <h2>Subscribe to our Newsletter</h2>
+                    <div class="input-group">
+                        <input type="email" class="form-control" placeholder="Enter your email">
+                        <span class="input-group-btn">
+                            <button class="btn btn-theme" type="submit">Subscribe</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
