--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <section class="bg-light text-dark">
       <div class="container" id="company">
           <div class="d-md-flex justify-content-between align-items-center">
-            <h3 class="mb-3 mb-md-0">Trusted by:</h3> 
+            <h3>Trusted by:</h3> 
             <img src="https://www.f-cdn.com/assets/main/en/assets/home/redesign/companies/google-logo.svg">
                <img src="https://www.f-cdn.com/assets/main/en/assets/home/redesign/companies/fujitsu-logo.svg">
                   <img src="https://www.f-cdn.com/assets/main/en/assets/home/redesign/companies/amazon_logo2.svg">
@@ -275,7 +275,7 @@
 
 
 
-          <div class="col">
+          <div class="col-md">
           <div class="card" style="width: 18rem;">
             <img src="projects/data.jpg" class="card-img-top" alt="Data Analyst">
             <div class="card-body">
