--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
 <!-- Qoute-->
   <section class="p-5">
-    <div class="container-fluid">
+    <div class="container-fluid text-center">
 
       <div class="row">
 
