--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Log In</a>
+              <a class="nav-link disabled" href="#">Log In</a>
             </li>
            
             <li class="nav-item">
