modified:   index.html

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                       <div class="d-flex align-items-center mb-3">
                         <p class="mb-0">
                           March 30, 2021
-                          <span class="badge bg-danger">Not Verified</span>
+                          <span class="badge bg-danger">Pending Verifiation</span>
                         </p>
                         <a href="#!" class="link-muted"><i class="fas fa-pencil-alt ms-2"></i></a>
                         <a href="#!" class="link-muted"><i class="fas fa-redo-alt ms-2"></i></a>
