modified:   index.html

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 
   <section>
-        <div class="container" id="cardbox">
+        <div class="container text-center" id="cardbox">
          
 
                 
