modified:   index.html

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   <section>
         <div class="container " id="cardbox">
 
-      <div class="row align-item-center">
+      <div class="row px-2">
         <h3>Popular Projects</h3>
        <div class="col-sm">
           <div class="card" style="width: 18rem;">
