modified:   index.html

--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
 
 
   <section>
-        <div class="container " id="cardbox">
+        <div class="container mx-5" id="cardbox">
 
-      <div class="row px-2">
+      <div class="row">
         <h3>Popular Projects</h3>
        <div class="col-sm">
           <div class="card" style="width: 18rem;">
