modified:   index.html

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 
   <section>
-        <div class="container mx-2" id="cardbox">
+        <div class="container d-flex justify-content-center" id="cardbox">
 
       <div class="row">
         <h3>Popular Projects</h3>
