--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
 
 
   <section>
-        <div class="container d-flex justify-content-center" id="cardbox">
+        <div class="container" id="cardbox">
 
-      <div class="row">
+      <div class="row  d-flex justify-content-center">
         <h3>Popular Projects</h3>
        <div class="col-sm">
           <div class="card" style="width: 18rem;">
