modified:   index.html

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <!-- PROJECTS SECTION-->
 
 
-  <section>
+  <section class="p-5">
         <div class="container" id="cardbox">
 
       <div class="row  d-flex justify-content-center">
