--- a/index.html
+++ b/index.html
@@ -176,11 +176,12 @@
   <!-- PROJECTS SECTION-->
 
 
-  <section class="p-5">
+  <section>
         <div class="container" id="cardbox">
 
-      <div class="row  d-flex justify-content-center">
+      <div class="row">
         <h3>Popular Projects</h3>
+
        <div class="col-sm">
           <div class="card" style="width: 18rem;">
             <img src="projects/web.jpg" class="card-img-top" alt="Web Dev">
@@ -216,6 +217,9 @@
             </div>
           </div>
           </div>
+
+
+          
 
 
 
