modified:   index.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div class="row">
         <h3>Popular Projects</h3>
 
-       <div class="col-sm">
+       <div class="col-md">
           <div class="card" style="width: 18rem;">
             <img src="projects/web.jpg" class="card-img-top" alt="Web Dev">
             <div class="card-body">
@@ -194,7 +194,7 @@
           </div>
         </div>
 
-        <div class="col-sm">
+        <div class="col-md">
           <div class="card" style="width: 18rem;">
             <img src="projects/design.jpg" class="card-img-top" alt="Graphics Design">
             <div class="card-body">
@@ -206,7 +206,7 @@
           </div>
 
 
-          <div class="col-sm">
+          <div class="col-md">
           <div class="card" style="width: 18rem;">
             <img src="projects/logo.jpg" class="card-img-top" alt="Logo Design">
             <div class="card-body">
@@ -223,7 +223,7 @@
 
 
 
-          <div class="col-sm">
+          <div class="col-md">
           <div class="card" style="width: 18rem;">
             <img src="projects/va.jpg" class="card-img-top" alt="Virtual Assistant">
             <div class="card-body">
@@ -239,7 +239,7 @@
 
           <!--SECOND LIND PROJECTS-->
     
-          <div class="col-sm">
+          <div class="col-md">
           <div class="card" style="width: 18rem;">
             <img src="projects/social.jpg" class="card-img-top" alt="Social Media">
             <div class="card-body">
@@ -252,7 +252,7 @@
           </div>
 
 
-          <div class="col-sm">
+          <div class="col-md">
           <div class="card" style="width: 18rem;">
             <img src="projects/writer.jpg" class="card-img-top" alt="Writer">
             <div class="card-body">
@@ -265,7 +265,7 @@
           </div>
 
 
-          <div class="col-sm">
+          <div class="col-md">
           <div class="card" style="width: 18rem;">
             <img src="projects/appdev.jpg" class="card-img-top" alt="Software Dev">
             <div class="card-body">
@@ -279,7 +279,7 @@
 
 
 
-          <div class="col-sm">
+          <div class="col-md">
           <div class="card" style="width: 18rem;">
             <img src="projects/data.jpg" class="card-img-top" alt="Data Analyst">
             <div class="card-body">
