--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="container" id="cardbox">
 
       <div class="row text-center">
-        <h3>Popular Projects</h3>
+        <h3 class="browse" id="browse">Popular Projects</h3>
 
 
 
