--- a/freelanceprofile/social.html
+++ b/freelanceprofile/social.html
@@ -42,14 +42,14 @@
               <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="../about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Log In</a>
+              <a class="nav-link" href="../index.html">Log In</a>
             </li>
            
             <li class="nav-item">
-                <a class="nav-link" href="#"> Sign Up</a></li> 
+                <a class="nav-link" href="../registration/registration.html"> Sign Up</a></li> 
          
           </ul>
         </div>
