modified:   about.html 	modified:   freelanceprofile/data.html 	modified:   freelanceprofile/freelance.html 	modified:   freelanceprofile/graphicsdesign.html 	modified:   freelanceprofile/logo.html 	modified:   freelanceprofile/social.html 	modified:   freelanceprofile/software.html 	modified:   freelanceprofile/virtual.html 	modified:   freelanceprofile/writer.html 	modified:   index.html 	modified:   jobs.html 	modified:   registration/registration.html

--- a/freelanceprofile/logo.html
+++ b/freelanceprofile/logo.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-2"> 
                                    
         <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
           <img src="../image/philippine.png" height="35">
             InCodenito</a> <!-- Image and Ttitle part-->
 
