--- a/freelanceprofile/software.html
+++ b/freelanceprofile/software.html
@@ -25,7 +25,7 @@
                                     
                                      
         <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
           <img src="../image/philippine.png" height="35">
             InCodenito</a> <!-- Image and Ttitle part-->
 
