--- a/index.html
+++ b/index.html
@@ -589,10 +589,10 @@
           <div class="card text-info bg-dark" id="lastcol">
             <div class="card-body text-center">
              <h5>Social</h5>
-             <a href="#"><p>Facebook</p></a>
-             <a href="#"><p>Twitter</p></a>
-             <a href="#"><p>Instagram</p></a>
-             <a href="#"><p>Linked In</p></a>
+             <a href="https://www.facebook.com/"><p>Facebook</p></a>
+             <a href="https://twitter.com/"><p>Twitter</p></a>
+             <a href="https://www.instagram.com/"><p>Instagram</p></a>
+             <a href="https://www.linkedin.com/"><p>Linked In</p></a>
             
             
             </div>
