--- a/registration/registration.html
+++ b/registration/registration.html
@@ -31,7 +31,7 @@
                                    
                                      
         <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
             <img src="../image/philippine.png" height="35">
             InCodenito</a> <!-- Image and Ttitle part-->
 
