modified:   registration/registration.html

--- a/registration/registration.html
+++ b/registration/registration.html
@@ -55,7 +55,7 @@
             </li>
            
             <li class="nav-item">
-                <a class="nav-link disabled"  href="../registration/registration.html"> Sign Up</a></li> <!--   
+                <a class="nav-link disabled"  href="../registration/registration.html"> Sign Up</a></li>  
            
           </ul>
         </div>
