--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             </li>
            
             <li class="nav-item">
-                <a class="nav-link" href="registration/registration.html"> Sign Up</a></li> <!--     
+                <a class="nav-link" href="registration/registration.html"> Sign Up</a></li>      
            
           </ul>
         </div>
