modified:   index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       
     <!--HEADLINE AREA-->
-    <section class=" text-light p-5 text-center text-sm-start" id="bg-image"> 
+    <section class=" text-light p-5 text-center" id="bg-image"> 
         <div class="container py-5 ">
           <div class="align-item-center ">
            <div> 
