modified:   index.html

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
           <div class="card text-info bg-dark" id="lastcol">
             <div class="card-body text-center">
              <h5>Contact</h5>
-             <a href="#"><p>Contact Us</p></a>
+             <a href="https://russelj91.github.io/Github-Elijah/#contact"><p>Contact Us</p></a>
              <a href="#"><p>Careers</p></a>
              <a href="#"><p>Press Center</p></a>
              <a href="#"><p>FAQ</p></a>
