--- a/registration/registration.html
+++ b/registration/registration.html
@@ -65,76 +65,62 @@
 
 
 
-  <section class=" p-5" id="bg">
-<div class="container py-5 text-center">
+<section>
+<div class="mask d-flex align-items-center h-100 gradient-custom-3">
+  <div class="container h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+        <div class="card" style="border-radius: 15px;">
+          <div class="card-body p-5">
+            <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
+            <form>
 
-<div class="row col-md-4 " id="regform">
+              <div class="form-outline mb-4">
+                <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                <label class="form-label" for="form3Example1cg">Your Name</label>
+              </div>
 
-  <div class="col">
-        <div class="card" id="card" >
-        <h2 class="text-light">Registration Form</h2>
+              <div class="form-outline mb-4">
+                <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
+                <label class="form-label" for="form3Example3cg">Your Email</label>
+              </div>
 
+              <div class="form-outline mb-4">
+                <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
+                <label class="form-label" for="form3Example4cg">Password</label>
+              </div>
 
-        <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  Register as Freelancer
+              <div class="form-outline mb-4">
+                <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
+                <label class="form-label" for="form3Example4cdg">Repeat your password</label>
+              </div>
+
+              <div class="form-check d-flex justify-content-center mb-5">
+                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
+                <label class="form-check-label" for="form2Example3g">
+                  I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
                 </label>
               </div>
 
-
-
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  Register as Employer
-                </label>
+              <div class="d-flex justify-content-center">
+                <button type="button"
+                  class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
               </div>
 
+              <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"
+                  class="fw-bold text-body"><u>Login here</u></a></p>
 
-    <form  action="" method="post" autocomplete="off">
-      
-        <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" name="name" id = "name" required value="">
-        </div> <br>
+            </form>
 
-
-
-        <div class="form-group">
-        <label for="username">Username</label>
-      <input type="text" class="form-control" name="username" id = "username" required value=""> <br>
+          </div>
         </div>
-
-        <div class="form-group">
-        <label for="email">Email</label>
-      <input type="email" class="form-control"  name="email" id = "email" required value=""> <br>
-        </div>
-
-        <div class="form-group">
-        <label for="password">Password</label>
-      <input type="password" class="form-control" name="password" id = "password" required value=""> <br>
-        </div>
-
-        <div class="form-group">
-        <label for="confirmpassword">Confirm Password</label>
-      <input type="password"  class="form-control" name="confirmpassword" id = "confirmpassword" required value=""> <br>
-
- 
-      
-      <button type="submit" class="btn btn-primary btn-block " name="submit">Register</button>
-        </div>
-    </form>
-        </div>
-    <br>
-   
-
+      </div>
+    </div>
+  </div>
+</div>
 </section>
-    <footer class="text-center" id="footer">
  
-<p>Develop by <span><a href="Russel">Russel</a>&copy;</span></p>
-</footer>
 
   </body>
 </html>
