--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
         <a class="navbar-brand" href="#">
             <img src="image/philippine.png" height="35">
-            In<span><i>Code</i></span>nito</a> 
+            Free<span><i>Lance</i></span>--</a> 
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
 
