--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="align-item-center ">
            <div> 
             <h1>We Provide the Best <span class="text-warning">Freelancer</span> you need!</h1>
-            <p class="lead">at Incodenito we help your Business Grow!</p>       
+            <p class="lead">at Freelance we help your Business Grow!</p>       
               <button type="button" class="btn btn-primary"><a href="#browse">Browse Freelancer</a></button>
               </div>
             </div>
