--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
 <section>
     <div class="container py-5">
-    <h2>Welcome to InCodenito</h2>
+    <h2>Welcome to Freelance</h2>
 
     
     <p>
@@ -79,17 +79,7 @@
 <hr>
 
 
-<div class="container">
-<div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFUKiNPtzY&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
-</div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFUKiNPtzY&#x2F;view?utm_content=DAFUKiNPtzY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">TITLE</a> by john russel
 
-</div>
 
 
 </body>
