--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <div class="container">
         <a class="navbar-brand" href="index.html">
             <img src="image/philippine.png" height="35">
-            InCodenito</a> 
+            Freelance</a> 
 
 
                     
