--- a/jobs.html
+++ b/jobs.html
@@ -24,7 +24,7 @@
         <div class="container">
         <a class="navbar-brand" href="index.html">
             <img src="image/philippine.png" height="35">
-            InCodenito</a> 
+            Freelance</a> 
 
 
                     
