--- a/registration/registration.html
+++ b/registration/registration.html
@@ -33,7 +33,7 @@
         <div class="container">
         <a class="navbar-brand" href="../index.html">
             <img src="../image/philippine.png" height="35">
-            InCodenito</a> <!-- Image and Ttitle part-->
+            Freelance</a> <!-- Image and Ttitle part-->
 
 
                     
@@ -77,27 +77,27 @@
             <form>
 
               <div class="form-outline mb-4">
-                <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                <input type="text" id="form3Example1cg" class="form-control form-control-lg" required/>
                 <label class="form-label" for="form3Example1cg">Your Name</label>
               </div>
 
               <div class="form-outline mb-4">
-                <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
+                <input type="email" id="form3Example3cg" class="form-control form-control-lg" required />
                 <label class="form-label" for="form3Example3cg">Your Email</label>
               </div>
 
               <div class="form-outline mb-4">
-                <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
+                <input type="password" id="form3Example4cg" class="form-control form-control-lg" required/>
                 <label class="form-label" for="form3Example4cg">Password</label>
               </div>
 
               <div class="form-outline mb-4">
-                <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
+                <input type="password" id="form3Example4cdg" class="form-control form-control-lg" required/>
                 <label class="form-label" for="form3Example4cdg">Repeat your password</label>
               </div>
 
               <div class="form-check d-flex justify-content-center mb-5">
-                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
+                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" required/>
                 <label class="form-check-label" for="form2Example3g">
                   I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
                 </label>
@@ -105,7 +105,7 @@
 
               <div class="d-flex justify-content-center">
                 <button type="button"
-                  class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                  class="btn btn-success btn-block btn-lg gradient-custom-4 text-body" value="submit">Register</button>
               </div>
 
               <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"
